# abril-care-data

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/providers/: README.md  dc_providers.json  md_providers.json
data/samples/: nyc_sample.json
docs/: adding-a-state.md  schema.md
scripts/: split_providers.py
src/: __init__.py
src/extractors/: __init__.py  nyc_dohmh.py
src/schema/: __init__.py  provider.py
tests/: __init__.py
