[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abril-care-data"
version = "0.1.0"
description = "Open source care provider data infrastructure"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Abril Care", email = "hello@abrilcare.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["childcare", "eldercare", "care", "healthcare", "open-data", "api"]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "sodapy>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9",
]
scraping = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "tabula-py>=2.8",
]
all = [
    "abril-care-data[dev,api,scraping]",
]

[project.urls]
Homepage = "https://github.com/abril-care/abril-care-data"
Documentation = "https://github.com/abril-care/abril-care-data#readme"
Repository = "https://github.com/abril-care/abril-care-data"
Issues = "https://github.com/abril-care/abril-care-data/issues"

[project.scripts]
abril = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
